--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,11 @@ logging.level.org.springframework.web=DEBUG
 
 spring.security.user.name=user
 spring.security.user.password=user123
+
+#One Time Password
+spring.mail.host=smtp.your-email-provider.com
+spring.mail.port=587
+spring.mail.username=donotreply.placeholder@gmail.com
+spring.mail.password=qokg rebe xkhh ooby
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
