--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,6 @@ logging.level.org.springframework.web=DEBUG
 spring.mail.host=smtp.your-email-provider.com
 spring.mail.port=587
 spring.mail.username=donotreply.placeholder@gmail.com
-spring.mail.password=qokg rebe xkhh ooby
+spring.mail.password=qokgrebexkhhooby
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
