--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.mail.username=donotreply.placeholder@gmail.com
 spring.mail.password=qokgrebexkhhooby
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.devtools.restart.enabled=true
