--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.5.6.RELEASE</version>
                 <configuration>
                     <excludes>
                         <exclude>
@@ -93,6 +94,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <addResources>true</addResources>
                 </configuration>
             </plugin>
         </plugins>
